<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/all"
        android:title="@string/all_title" />
    <item
        android:id="@+id/san"
        android:title="@string/san_title" />
    <item
        android:id="@+id/game"
        android:title="@string/game_title" />
    <item
        android:id="@+id/mus"
        android:title="@string/mus_title" />

    <item
        android:id="@+id/gen"
        android:title="@string/gen_title" />

    <item
        android:id="@+id/pol"
        android:title="@string/pol_title" />

    <item
        android:id="@+id/tech"
        android:title="@string/tech_title" />

    <item
        android:id="@+id/spo"
        android:title="@string/spo_title" />

    <item
        android:id="@+id/ent"
        android:title="@string/ent_title" />
    <item
        android:id="@+id/bus"
        android:title="@string/bus_title" />
</menu>